# CppNeuralNetwork

./: .gitignore  CMakeLists.txt  README.md  main.cpp
libs/imgui/: imgui.cpp  imgui.h
src/: GUI.cpp  NeuralNetwork.cpp  test.cpp
src/headers/: GUI.h  NeuralNetwork.h
